Java 21 (#134)
* filter on active handles

* fix 500 exception

* Testing

* extra test

* java 21

* spring boot update

* github worlflow file

* jacoco version

* docker

* java dist